Fix the grid columns width and add a gap by default

--- a/index.scss
+++ b/index.scss
@@ -1,19 +1,21 @@
 @import "functions";
 
-@mixin grid($columns) {
-    display: grid;
-
-    @if (_next-grid-is-number($columns)) {
-        grid-template-columns: _next-grid-repeater($columns, auto);
-    } @else {
-        grid-template-columns: #{$columns};
-    }
-}
-
 @mixin gap($gap: 30px) {
     grid-column-gap: #{$gap}
 }
 
 @mixin gap-v($gap: 30px) {
     grid-row-gap: #{$gap}
+}
+
+@mixin grid($columns) {
+    display: grid;
+
+    @if (_next-grid-is-number($columns)) {
+        grid-template-columns: _next-grid-repeater($columns, 1fr);
+    } @else {
+        grid-template-columns: #{$columns};
+    }
+
+    @include gap();
 }
